#-----------------------------------------------------------------
# Changes for Module::CPANTS::Analyse
# $Rev: 4154 $
# $Date: 2006-07-17T08:35:58.306162Z $ 
#-----------------------------------------------------------------


0.61    2006-07-17
  - Kwalitee metrics can now be marked as 'is_extra'
    Such metrics do not count for available kwalitee
  - marked is_prereq as 'is_extra'
  - cpants_lint now reports percentages additional to absolut
    values
  - cpants_lint won't list failed is_extra metrics
  - added some method caching to M:C:Kwalitee
  - added total_kwalitee to M:C:Kwalitee.


0.60    2006-05-18
  - activated is_prereq metric
  - added helper method (available_kwalitee)
  - MCK::FindModules: skip stuff in inc (Module::Install)

    
0.52    2006-03-12
  - added some dependencies to Build.PL/META.yml (thanks to Achim Grolms 
    and BLBLACK (RT #17977))
  - enhanced output of cpants_lint.pl (list failed tests)
  - MCK::FindModules: die if we cannot find a namespace
  - MCK::FindModules: remove stuff that doesn't seems to be namespace (eg lowercase) from module names
  - changed the name of some fields to work with the (upcoming) DB
  - added some tests

  
0.51   2006-02-16
  - adapted Module::CPANTS::Kwalitee::Prereq to work with newer versions
    of YAML (reported by Andreas Koenig as RT #17670)


0.50   2006-01-26
  - first release to CPAN


0.01    
  - started rewrite
