@@ -7,7 +7,7 @@ my $a=Module::CPANTS::Analyse->new({});
 
 {
 	my @plugins=$a->plugins;
-	is(@plugins,7,'number of plugins');
+	is(@plugins,8,'number of plugins');
 }
 
 
@@ -18,6 +18,6 @@ is(shift(@$plugins),'Module::CPANTS::Kwalitee::Distname','plugin order 2 Distnam
 is(shift(@$plugins),'Module::CPANTS::Kwalitee::FindModules','plugin order 3 FindModules');
 is(pop(@$plugins),'Module::CPANTS::Kwalitee::CpantsErrors','plugin order last CpantsErrors');
 
-cmp_deeply($plugins,bag(qw(Module::CPANTS::Kwalitee::Pod Module::CPANTS::Kwalitee::Prereq Module::CPANTS::Kwalitee::Uses)),'plugin order the rest');
+cmp_deeply($plugins,bag(qw(Module::CPANTS::Kwalitee::Pod Module::CPANTS::Kwalitee::Prereq Module::CPANTS::Kwalitee::Uses Module::CPANTS::Kwalitee::BrokenInstaller)),'plugin order the rest');
 
 
