@@ -1,8 +1,12 @@
 #-----------------------------------------------------------------
 # Changes for Module::CPANTS::Analyse
-# $Rev: 4154 $
-# $Date: 2006-07-17T08:35:58.306162Z $ 
+# $Rev: 4184 $
+# $Date: 2006-07-19T21:01:30.111016Z $ 
 #-----------------------------------------------------------------
+
+
+  - added MCK::BrokenInstaller,
+    submitted by Steffen Müller smueller@cpan.org
 
 
 0.61    2006-07-17
